fleet/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: dashy
  sessionAffinity: None
  type: ClusterIP
