fleet/dashy/dashy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: default
  labels:
    app.kubernetes.io/name: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy:latest
        volumeMounts:
        - name: config
          mountPath: "/app/public/conf.yml"
          subPath: "conf.yml"
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: dashy-config-v3
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: dashy
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: dashy.k8s.leb.memhamwan.net
    http:
      paths:
      - backend:
          service:
            name: dashy
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dashy.k8s.leb.memhamwan.net
    secretName: dashy-tls
