fleet/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashy
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: dashy.k8s.leb.memhamwan.net
      http:
        paths:
          - backend:
              serviceName: dashy
              servicePort: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dashy.k8s.leb.memhamwan.net
      secretName: dashy-tls
